# hass-opnsense

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CHANGELOG.old.md  CONTRIBUTING.md  LICENSE  README.md  data.json  function_method.md  granular_permissions.md  hacs.json  prek-autoupdate-body.md  prek.toml  pyproject.toml  requirements-dev.txt  requirements-lint.txt  requirements-pytest.txt  requirements.txt  requirements_dev.txt
.github/: copilot-instructions.md  labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/scripts/: __init__.py  build_aiopnsense_release_notes.py  cleanup_aiopnsense_update_branches.py  cleanup_prek_update_branches.py  update_aiopnsense_pins.py
.github/workflows/: ha_and_hacs_validate.yml  hacs.yml  hassfest.yml  labeler.yml  linters.yml  lock_closed_issues.yml  merge_conflict_labeler.yml  post_coverage.yml  post_coverage_to_pr.yml  prek_autoupdate.yml  pytest_coverage.yml  release.yml  test_coverage.yml  update_aiopnsense.yml  update_aiopnsense_manifest.yml  validate.yml  version_update_and_zip_on_release.yml
custom_components/opnsense/: __init__.py  binary_sensor.py  client_factory.py  client_protocol.py  config_flow.py  const.py  coordinator.py  device_tracker.py  diagnostics.py  entity.py  helpers.py  manifest.json  migrate.py  models.py  queue.py  repair_reconciliation.py  repairs.py  sensor.py  services.py  services.yaml  strings.json  switch.py  traffic_coordinator.py  update.py
custom_components/opnsense/pyopnsense/: __init__.py  _typing.py  client.py  client_base.py  client_methods_part1.py  client_methods_part2.py  client_methods_part3.py  client_methods_part4.py  client_methods_part5.py  client_shared.py  const.py  core.py  dhcp.py  exceptions.py  firewall.py  firmware.py  helpers.py  services.py  speedtest.py  system.py  telemetry.py  unbound.py  vnstat.py  vouchers.py  vpn.py
custom_components/opnsense/pypfsense/: __init__.py
custom_components/opnsense/translations/: en.json
custom_components/pfsense/: __init__.py  binary_sensor.py  config_flow.py  const.py  device_tracker.py  manifest.json  sensor.py  services.py  services.yaml  strings.json  switch.py  utils.py
custom_components/pfsense/pypfsense/: __init__.py
custom_components/pfsense/translations/: en.json
docs/: device_tracker.md  granular_permissions.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_8d042fd4c41619e0___init___py.html  z_8d042fd4c41619e0__typing_py.html  z_8d042fd4c41619e0_client_base_py.html  z_8d042fd4c41619e0_client_py.html  z_8d042fd4c41619e0_const_py.html  z_8d042fd4c41619e0_dhcp_py.html  z_8d042fd4c41619e0_exceptions_py.html  z_8d042fd4c41619e0_firewall_py.html  z_8d042fd4c41619e0_firmware_py.html  z_8d042fd4c41619e0_helpers_py.html  z_8d042fd4c41619e0_services_py.html  z_8d042fd4c41619e0_speedtest_py.html  z_8d042fd4c41619e0_system_py.html  z_8d042fd4c41619e0_telemetry_py.html  z_8d042fd4c41619e0_unbound_py.html  z_8d042fd4c41619e0_vnstat_py.html  z_8d042fd4c41619e0_vouchers_py.html  z_8d042fd4c41619e0_vpn_py.html  z_a139522e3a23c96e___init___py.html  z_a139522e3a23c96e_binary_sensor_py.html  z_a139522e3a23c96e_client_factory_py.html  z_a139522e3a23c96e_client_protocol_py.html  z_a139522e3a23c96e_config_flow_py.html  z_a139522e3a23c96e_const_py.html  z_a139522e3a23c96e_coordinator_py.html  z_a139522e3a23c96e_device_tracker_py.html  z_a139522e3a23c96e_diagnostics_py.html  z_a139522e3a23c96e_entity_py.html  z_a139522e3a23c96e_helpers_py.html  z_a139522e3a23c96e_migrate_py.html  z_a139522e3a23c96e_models_py.html  z_a139522e3a23c96e_repair_reconciliation_py.html  z_a139522e3a23c96e_repairs_py.html  z_a139522e3a23c96e_sensor_py.html  z_a139522e3a23c96e_services_py.html  z_a139522e3a23c96e_switch_py.html  (+2 more)
tests/: __init__.py  conftest.py  test_binary_sensor.py  test_client_factory.py  test_config_flow.py  test_coordinator.py  test_device_tracker.py  test_diagnostics.py  test_entity.py  test_helpers.py  test_init.py  test_integration.py  test_prek_autoupdate_workflow.py  test_pyopnsense.py  test_pyopnsense_init.py  test_repair_reconciliation.py  test_repairs.py  test_sensor.py  test_services.py  test_switch.py  test_traffic_coordinator.py  test_update.py  test_update_aiopnsense_workflow.py  utilities.py
tests/pyopnsense/: __init__.py  test_client_base.py  test_dhcp.py  test_exceptions.py  test_firewall.py  test_firmware.py  test_helpers.py  test_pyopnsense.py  test_services.py  test_speedtest.py  test_system.py  test_telemetry.py  test_unbound.py  test_vnstat.py  test_vouchers.py  test_vpn.py
